<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JXD Mapper</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="btn_Able">Apply</string>
    <string name="btn_Disable">Cancel</string>
    <string name="gamekey_reset">Reset</string>
    <string name="btn_bigger">Bigger</string>
    <string name="btn_smaller">Smaller</string>
    <string name="btn_modeswitch">Mapping Mode</string>
    <string name="btn_view_ctl">Visual control</string>
    <string name="levelone"></string>
    <string name="leveltwo"></string>
    <string name="levelthree"></string>
    <string name="levelfour"></string>
    <string name="levelfive"></string>
    <string name="btn_mode1">M1</string>
    <string name="btn_mode2">M2</string>
    <string name="btn_mode3">M3</string>
    <string name="rocker_left">Left Joystick</string>
    <string name="rocker_right">Right Joystick</string>
    
    <string name="profile_new">New</string>
    <string name="profile_del">Delete</string>
    <string name="profile_load">Load</string>
    <string name="profile_save">Save</string>
    <string name="delete_message">Do you really want to delete this profile?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="profile_save_title">New Profile</string>
    <string name="profile_save_Message">Insert name for new profile:</string>
    
    
</resources>