<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="900dp"
        android:layout_y="2dp"
        android:text="@string/gamekey_reset" />

    <ImageButton
        android:id="@+id/button_lpad_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="136dp"
        android:layout_y="370dp"
        android:background="#00000000"
        android:src="@drawable/button_lpad_up"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/button_lpad_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="76dp"
        android:layout_y="416dp"
        android:background="#00000000"
        android:src="@drawable/button_lpad_left"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/button_lpad_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="196dp"
        android:layout_y="416dp"
        android:background="#00000000"
        android:src="@drawable/button_lpad_right"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/button_lpad_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="136dp"
        android:layout_y="476dp"
        android:background="#00000000"
        android:src="@drawable/button_lpad_down"
        android:visibility="gone" />
    
    <ImageButton
        android:id="@+id/button_rpad_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="876dp"
        android:layout_y="370dp"
        android:background="#00000000"
        android:src="@drawable/button_rpad_up"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/button_rpad_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="816dp"
        android:layout_y="416dp"
        android:background="#00000000"
        android:src="@drawable/button_rpad_left"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/button_rpad_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="936dp"
        android:layout_y="416dp"
        android:background="#00000000"
        android:src="@drawable/button_rpad_right"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/button_rpad_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="876dp"
        android:layout_y="476dp"
        android:background="#00000000"
        android:src="@drawable/button_rpad_down"
        android:visibility="gone" />
    	
    <ImageButton
        android:id="@+id/btn_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="427dp"
        android:layout_y="125dp"
        android:background="#00000000"
        android:src="@drawable/button_select" 
        android:visibility="gone"/>
    
    <ImageButton
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="510dp"
        android:layout_y="125dp"
        android:background="#00000000"
        android:src="@drawable/button_start" 
        android:visibility="gone"/>
 
    <ImageButton
        android:id="@+id/btn_volup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="427dp"
        android:layout_y="200dp"
        android:background="#00000000"
        android:src="@drawable/button_volup" 
        android:visibility="gone"/>    

    <ImageButton
        android:id="@+id/btn_voldn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="510dp"
        android:layout_y="200dp"
        android:background="#00000000"
        android:src="@drawable/button_voldn" 
        android:visibility="gone"/>
    
    <ImageButton
        android:id="@+id/btn_l2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="453dp"
        android:layout_y="44dp"
        android:background="#00000000"
        android:src="@drawable/button_l2" />

    <ImageButton
        android:id="@+id/btn_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="513dp"
        android:layout_y="44dp"
        android:background="#00000000"
        android:src="@drawable/button_l" />

    <ImageButton
        android:id="@+id/btn_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="633dp"
        android:layout_y="44dp"
        android:background="#00000000"
        android:src="@drawable/button_r" />

    <ImageButton
        android:id="@+id/btn_r2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="573dp"
        android:layout_y="44dp"
        android:background="#00000000"
        android:src="@drawable/button_r2" />

    <ImageButton
        android:id="@+id/btn_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="787dp"
        android:layout_y="60dp"
        android:background="#00000000"
        android:src="@drawable/button_x" />

    <ImageButton
        android:id="@+id/btn_y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="726dp"
        android:layout_y="115dp"
        android:background="#00000000"
        android:src="@drawable/button_y" />

    <ImageButton
        android:id="@+id/btn_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="790dp"
        android:layout_y="166dp"
        android:background="#00000000"
        android:src="@drawable/button_b" />

    <ImageButton
        android:id="@+id/btn_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="851dp"
        android:layout_y="116dp"
        android:background="#00000000"
        android:src="@drawable/button_a" />
    
    
    <!-- three circle -->
       <ImageButton
        android:id="@+id/ib_analog_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="89dp"
        android:layout_y="370dp"
        android:background="#00000000"
        android:src="@drawable/button_analog_l" />

    <ImageButton
        android:id="@+id/ib_analog_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="743dp"
        android:layout_y="236dp"
        android:background="#00000000"
        android:src="@drawable/button_analog_view" />

    <ImageButton
        android:id="@+id/ib_analog_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="804dp"
        android:layout_y="365dp"
        android:background="#00000000"
        android:src="@drawable/button_analog_r"
        android:visibility="gone" />
    
    
    
    <AbsoluteLayout
        android:id="@+id/absoluteLayoutMove"
        android:layout_width="440dip"
        android:layout_height="wrap_content"
        android:layout_x="14dp"
        android:layout_y="13dp"
        android:background="#80333333"
        android:orientation="vertical" >

		<LinearLayout
		    android:layout_width="440dip"
		    android:layout_height="348dp"
		    android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="260dip"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

			<LinearLayout
			    android:layout_width="260dip"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" >

			    <LinearLayout
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_weight="0.71"
			        android:orientation="horizontal" >

			        <TextView
			            android:layout_width="120dp"
			            android:layout_height="37dip"
			            android:layout_marginTop="3dip"
			            android:background="@drawable/movetextview"
			            android:gravity="center"
			            android:textSize="20dip" />
			    </LinearLayout>

			    <ImageButton
			        android:id="@+id/collapse_button"
			        android:layout_width="wrap_content"
			        android:layout_height="40dip"
			         />
			</LinearLayout>

		<LinearLayout
            android:layout_width="260dip"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/btn_Able"
                android:layout_width="130dip"
                android:layout_height="40dip"
                android:clickable="true"
                android:text="@string/btn_Able" />

            <Button
                android:id="@+id/btn_Disable"
                android:layout_width="130dip"
                android:layout_height="40dip"
                android:clickable="true"
                android:text="@string/btn_Disable"
                 />
			</LinearLayout>
            <LinearLayout
                android:id="@+id/mode_switch2"
                android:layout_width="260dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/text_modeswitch2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dip"
                    android:text="@string/btn_modeswitch" />

                <Spinner
                    android:id="@+id/mode_switch"
                    android:layout_width="match_parent"
                    android:textColor="@android:color/white"
                    android:layout_height="55dip" />
                
            </LinearLayout>
            <!-- left rocker -->
			<LinearLayout
			    android:id="@+id/rocker_left"
                android:layout_width="260dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dip"
                android:visibility="visible"
                android:orientation="vertical" >
				<LinearLayout
			    android:id="@+id/rocker_lstick"
                android:layout_width="260dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dip"
                android:visibility="visible"
                android:orientation="horizontal" >

					<TextView
					    android:id="@+id/rocker_left_label"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:text="@string/rocker_left" />

					<Spinner
					    android:id="@+id/lstickmode"
					    android:layout_width="match_parent"
					    android:layout_height="55dp" 
					    android:visibility="gone"/>
					
				</LinearLayout>
            <LinearLayout
                android:id="@+id/left_analog"
                android:layout_width="260dip"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <Button
                    android:id="@+id/bt_left_smaller"
                    android:layout_width="130dip"
                    android:layout_height="40dip"
                    
                    android:clickable="true"
                    android:text="@string/btn_smaller"
                     >
                </Button>

                <Button
                    android:id="@+id/bt_left_bigger"
                    android:layout_width="130dip"
                    android:layout_height="40dip"
                    
                    android:text="@string/btn_bigger"
                     >
                </Button>
            </LinearLayout>
            </LinearLayout>
            
			
			<!-- right rocker -->

			

			<LinearLayout
			    android:id="@+id/rocker_right"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="2dip"
			    android:orientation="vertical"
			    android:visibility="visible" >
            	</LinearLayout>
				<LinearLayout
				    android:id="@+id/rocker_rstick"
				    android:layout_width="260dip"
				    android:layout_height="match_parent"
				    android:layout_marginTop="2dip"
				    android:orientation="horizontal"
				    android:visibility="visible" >

						<TextView
					    android:id="@+id/right_view_label"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:text="@string/rocker_right" />

					<Spinner
					    android:id="@+id/rstickmode"
					    android:layout_width="match_parent"
					    android:layout_height="55dp" 
					    android:visibility="gone"/>
				</LinearLayout>
				<LinearLayout
			    android:id="@+id/right_view"
                android:layout_width="260dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dip"
                android:visibility="visible"
                android:orientation="vertical" >
					<SeekBar
					    android:id="@+id/sensitivity"
					    android:layout_width="match_parent"
					    android:layout_height="wrap_content"
					    android:layout_weight="1" 
					    android:max="4"/>
            </LinearLayout>
			<LinearLayout
			    android:id="@+id/right_analog"
                android:layout_width="260dip"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone" >
                <Button
                    android:id="@+id/bt_right_smaller"
                    android:layout_width="130dip"
                    android:layout_height="40dip"
                    
                    android:clickable="true"
                    android:text="@string/btn_smaller"
                     >
                </Button>

                <Button
                    android:id="@+id/bt_right_bigger"
                    android:layout_width="130dip"
                    android:layout_height="40dip"
                    
                    android:text="@string/btn_bigger"
                     >
                </Button>
            
			</LinearLayout>
			

			<!-- right view --> 
			
         

            
        </LinearLayout>

        
        
        <LinearLayout
            android:id="@+id/layout_profiles"
            android:layout_width="180dip"
            android:layout_height="wrap_content"
            android:orientation="vertical"
             >
			<LinearLayout
            android:layout_width="180dip"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                    android:id="@+id/bt_profile_new"
                    android:layout_width="90dip"
                    android:layout_height="40dip"
                    
                    android:clickable="true"
                    android:text="@string/profile_new"
                     >
                </Button>

                <Button
                    android:id="@+id/bt_profile_del"
                    android:layout_width="90dip"
                    android:layout_height="40dip"
                    
                    android:text="@string/profile_del"
                     >
                </Button>
            </LinearLayout>
			<LinearLayout
            android:layout_width="180dip"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
			<Button
                    android:id="@+id/bt_profile_load"
                    android:layout_width="180dip"
                    android:layout_height="40dip"
                   
                    android:text="@string/profile_load"
                     >
            </Button>

            <ListView
                android:id="@+id/listProfile"
                android:layout_width="180dip"
                android:layout_height="match_parent"
                android:background="#80222222" >

			</ListView>
			</LinearLayout>
		</LinearLayout>
        
        
        </LinearLayout>
        
    </AbsoluteLayout>


 
</AbsoluteLayout>
